--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,8 +11,9 @@ body {
   background-image: url("/background.png");
   background-repeat: no-repeat;
   background-position: center;
+  /* background-size: contain;   */
   background-size: contain;
-  /* background-size: contain; */
+  /* height:100vh; */
   font-family: "Poppins", sans-serif !important;
   font-weight: 300;
   font-style: normal;
@@ -21,65 +22,6 @@ body {
 @media (max-width:786px) {
   body {
     background-image: none;
-  }
-}
-
-/* Add this to your CSS */
-
-.text_1 {
-  animation: text1;
-}
-
-.text_2 {
-  animation: text2;
-}
-
-.text_1,
-.text_2 {
-  overflow: hidden;
-  white-space: nowrap;
-  display: inline-block;
-  position: relative;
-  animation-duration: 15s;
-  animation-timing-function: steps(10);
-  animation-iteration-count: infinite;
-}
-
-.text_1::after,
-.text_2::after {
-  content: "|";
-  position: absolute;
-  right: 1px;
-  animation: caret infinite;
-  animation-duration: 1s;
-  animation-timing-function: steps(1);
-}
-
-@keyframes text2 {
-
-  0%,
-  50%,
-  100% {
-    width: 0;
-  }
-
-  60%,
-  90% {
-    width: 8em;
-  }
-}
-
-@keyframes text1 {
-
-  0%,
-  50%,
-  100% {
-    width: 0;
-  }
-
-  10%,
-  40% {
-    width: 8em;
   }
 }
 
@@ -111,7 +53,7 @@ body {
 }
 @layer component {
   .blackBox{
-    @apply bg-black rounded-xl md:w-[500px]  w-[70%] mx-auto md:p-5 p-4 cursor-pointer
+    @apply bg-black rounded-xl md:w-[500px]  w-[80%] mx-auto md:p-5 p-4 cursor-pointer
   }
 
   .bluebox{
